프로젝트_브란도_아웃라인

--- a/11_09/css/response.css
+++ b/11_09/css/response.css
@@ -7,7 +7,7 @@
 }
 
 @media all and (max-width:1170px){
-    #main .section234 .wrap .gap {margin:0;}
+    /* #main .section234 .wrap .gap {margin:0;} */
 }
 
 @media all and (max-width:1200px)/*990px이하 해상도 모두 가능*/ {
