--- a/11_09/11_09_프로젝트_브란도_레스토랑_반응형_웹사이트제작_혼자하기/css/style.css
+++ b/11_09/11_09_프로젝트_브란도_레스토랑_반응형_웹사이트제작_혼자하기/css/style.css
@@ -62,9 +62,21 @@
 #main .section234 .wrap {width:100%;max-width:1170px;margin:0 auto;height:100%;}
 #main .section234 .wrap .gap {margin:0 15px;height:100%;}
 #main .section234 .wrap .gap .container {position:relative;width:100%;}
-#main .section234 .wrap .gap .container .content-wrap {position:absolute;top:209.5px;right:0;/* right:345px */;width:100%;max-width:450px;height:550px;background:#fff;}
+#main .section234 .wrap .gap .container .content-wrap {position:absolute;top:209.5px;right:0;/* right:345px */width:100%;max-width:450px;height:550px;background:#fff;}
 /* #main .section234 .wrap .gap .container .content-wrap:after {top:28px;left:28pxwidth:394px;height:494px;}를 그리드(비율) 형식으로 고쳐 써주면 css에서 해야할 작업 완료->제이쿼리로 넘어가기 */
-#main .section234 .wrap .gap .container .content-wrap:after/* outline : 공중에 떠 있는 요소 */ {position:absolute;top:5.090909%;left:6.222222%;content:"";display:block;width:87.555556%;height:89.818182%;outline:8px solid #d8b75f;}
+#main .section234 .wrap .gap .container .content-wrap:after/* outline : 공중에 떠 있는 요소 */{position:absolute;top:5.090909%;left:6.222222%;content:"";display:block;width:87.555556%;height:89.818182%;outline:8px solid #d8b75f;}
+#main .section234 .wrap .gap .container .content-wrap .text-gap {margin:17.777778%;}
+#main .section234 .wrap .gap .container .content-wrap .text-gap .text-wrap {text-align:center;}
+#main .section234 .wrap .gap .container .content-wrap .text-gap .text-wrap > h2 {width:100%;padding-bottom:6.8965517%;}
+#main .section234 .wrap .gap .container .content-wrap .text-gap .text-wrap > h2 > img {width:15.517241%;}
+#main .section234 .wrap .gap .container .content-wrap .text-gap .text-wrap > h3 {font-size:28px;padding-bottom:5.1724138%;color:#614c45;font-family:"Montserrat";font-weight:800;}
+#main .section234 .wrap .gap .container .content-wrap .text-gap .text-wrap > h4 {font-size:11px;padding-bottom:10.344828%;letter-spacing:1px;}
+#main .section234 .wrap .gap .container .content-wrap .text-gap .text-wrap > h5 {width:100%;padding-bottom:6.8965517%;}
+#main .section234 .wrap .gap .container .content-wrap .text-gap .text-wrap > h5 > img {width:61.379310%;}
+#main .section234 .wrap .gap .container .content-wrap .text-gap .text-wrap > p {font-size:14px;line-height:180%;padding-bottom:10.344828%;letter-spacing:.5px;}
+#main .section234 .wrap .gap .container .content-wrap .text-gap .text-wrap > span {display:block;}
+#main .section234 .wrap .gap .container .content-wrap .text-gap .text-wrap > span > a {display:block;}
+#main .section234 .wrap .gap .container .content-wrap .text-gap .text-wrap > span > a > img {width:11.034483%;}
 
 #main #section03 {width:100%;height:969px;background:url(../img/restaurant-img2.jpg) no-repeat 50% 0 fixed;background-size:cover;}
 #main #section03 .content-wrap {left:0;}
@@ -77,7 +89,7 @@
 #main #section09 {width:100%;height:932px;padding:130px 0;}
 #main #section10 {width:100%;height:268px;padding:130px 0;}
 #main #section11 {width:100%;height:775px;background:url(../img/slider-img6.jpg) 50% 50% fixed;background-size:cover;padding:130px 0;}
-#main #section12 {width:100%;height:176px;background:url(../img/restaurant-img40.jpg) 50% 50%;background-size:cover;padding:130px 0;}
+#main #section12 {width:100%;height:176px;background:url(../img/restaurant-img40.jpg) 50% 50%;background-size:cover;padding:130px 0;}line-
 #main #section13 {width:100%;height:103px;padding:114px 0 130px 0;}
 #main #section14 {width:100%;height:568px;border:1px solid rgba(0,0,0, .1);padding:130px 0 130px 0;}
 
