프로젝트_브란도_슬라이드_fade_In_Out

--- a/11_09/css/style.css
+++ b/11_09/css/style.css
@@ -50,8 +50,19 @@
 
 
 #main   {z-index:2;position:relative;width:100%;}
-#main #section01/*넓이, 높이, 배경으로 확인하는게 제일 첫 순서*/ {z-index:1;position:relative;width:100%;height:969px;background:url(../img/slider-img4.jpg) no-repeat 50% 0 fixed/* 스크롤안됨 */;background-size:100% 100%;}
+#main #section01/*넓이, 높이, 배경으로 확인하는게 제일 첫 순서*/ {z-index:1;position:relative;width:100%;height:969px;}
 #main #section01::after {z-index:2;position:absolute;content:"";display:block;top:0;left:0;width:100%;height:100%;background:#252525;opacity:.7;}
+#main #section01 .slide-container {z-index:1;/* 뒷배경같이 나와야되니까 */position:relative;width:100%;height:100%;}
+#main #section01 .slide-container .slide-view {position:relative;width:100%;height:100%;}
+#main #section01 .slide-container .slide-view .slide-wrap {position:relative;width:100%;height:100%;}
+#main #section01 .slide-container .slide-view .slide-wrap .slide {z-index:1;position:absolute;top:0;left:0;width:100%;height:100%;}
+#main #section01 .slide-container .slide-view .slide-wrap .slide0 {z-index:3;} /* 눈에 보이는 슬라이드 z-index:3; */
+#main #section01 .slide-container .slide-view .slide-wrap .slide1 {z-index:2;} /* 3번 다음으로 보여져야 되는 슬라이드 z-index:2; */
+/* 슬라이드 3장이 하나로 포개져서 그 중에 하나만 보이고 나머지는 사라져야함, opacuty로 설정 */
+/* z-index를 안 쓴 상태에선 가장 나중에 배치한 슬라이드 3번이 제일 앞에 있음 */
+#main #section01 .slide-container .slide-view .slide-wrap .slide > div {width:100%;height:100%;overflow:hidden;/* 969높이로 짤림 */}
+#main #section01 .slide-container .slide-view .slide-wrap .slide > div > img {width:105%;}
+
 #main #section01 .hungry {z-index:3;position:absolute;display:inline-block;top:382px;width:100%;text-align:center;}/* 높이 잡으면 여기 박스도 반응형으로 만들어야되니까 높이X */
 #main #section01 .hungry > img {width:100%;max-width:542px;}/* max(min)-width ; 반응형할 때 많이 씀, hungry자체가 넓이 100%니까 max가 되는거임*/
 #main #section01 .arrow-down {z-index:3;position:absolute;bottom:60px;left:50%;margin-left:-16px;display:inline-block;width:32px;height:32px;}
